--- a/.env
+++ b/.env
@@ -1,33 +1,23 @@
-# COMMENT
-DB_MYSQL_VERSION=5.7
-DB_MYSQL_PORT=3306
-DB_MYSQL_PASSWORD=123456
-DB_MYSQL_NAME=drupal
-DB_MYSQL_USER=drupal
-DB_MYSQL_HOST=mysql
+# add this file
+# Initial db root password is 123456
+# Initial login username: me@example.com and login password: admin123
 
-MQ_KAFKA_PORT=9092
-MQ_RABBITMQ_PORT=5672
+DB_MARIADB_VERSION=10.5
+DB_MARIADB_PORT=3306
+DB_MARIADB_PASSWORD=123456
+DB_MARIADB_HOST=db
 
-DB_POSTGRESQL_VERSION=9.5
-DB_REDIS_VERSION=5.0
+DB_MEMCACHED_VERSION=1.5.6
+
+DB_ELASTICSEARCH_VERSION=5.6.16
 
 APP_VERSION=latest
-APP_PORT=9001
-
-# more than two ports
-APP_HTTP_PORT=9001
-APP_SSH_PORT=9002
-
-APP_PASSWORD_INIT=True
-APP_USER=
-APP_PASSWORD=
-APP_CONTAINER_NAME=onlyoffice
-APP_NETWORK=onlyoffice
-APP_SITE_NAME=Gost blog
-APP_SITE_URL=appname.example.com
+APP_PORT=9100
+APP_USER=me@example.com
+APP_PASSWORD=admin123
+APP_CONTAINER_NAME=seafile
+APP_TIME_ZONE=Etc/UTC
+APP_NETWORK=seafile
 
 VOLUMES_PATH_PREFIX=./volumes
-DOMAIN=appname.example.com
-EMAIL=help@websoft9.com
-
+DOMAIN=seafile.example.com
