--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,112 +1,64 @@
-# this file from docker-compose.workspace, delete mail-server
-# default MySQL root password is 123456
-
-
 version: '3.8'
 services:
-  onlyoffice-mysql-server:
-    container_name: ${APP_CONTAINER_NAME}-mysql
-    image: mysql:${DB_MYSQL_VERSION}
-    environment:
-     - MYSQL_ROOT_PASSWORD=${DB_MYSQL_PASSWORD}
-    stdin_open: true
-    user: root
-    tty: true
+  db:
+    image: mariadb:$DB_MARIADB_VERSION
+    container_name: $APP_CONTAINER_NAME-mysql
     restart: always
-    volumes:
-     - ${VOLUMES_PATH_PREFIX}/config/mysql/conf.d:/etc/mysql/conf.d
-     - ${VOLUMES_PATH_PREFIX}/config/mysql/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
-     - ${VOLUMES_PATH_PREFIX}/mysql_data:/var/lib/mysql
-     
-  onlyoffice-community-server:
-    container_name: ${APP_CONTAINER_NAME}
-    image: onlyoffice/communityserver:11.0.0.1458
-    depends_on:
-     - onlyoffice-mysql-server
-     - onlyoffice-document-server
-    environment:
-     - ONLYOFFICE_CORE_MACHINEKEY=core_secret
-     - CONTROL_PANEL_PORT_80_TCP=80
-     - CONTROL_PANEL_PORT_80_TCP_ADDR=onlyoffice-control-panel
-     - DOCUMENT_SERVER_PORT_80_TCP_ADDR=onlyoffice-document-server
-     - DOCUMENT_SERVER_JWT_ENABLED=true
-     - DOCUMENT_SERVER_JWT_SECRET=jwt_secret
-     - DOCUMENT_SERVER_JWT_HEADER=AuthorizationJwt
-     - MYSQL_SERVER_ROOT_PASSWORD=123456
-     - MYSQL_SERVER_DB_NAME=onlyoffice
-     - MYSQL_SERVER_HOST=onlyoffice-mysql-server
-     - MYSQL_SERVER_USER=onlyoffice
-     - MYSQL_SERVER_PASS=123456
     ports:
-     - '${APP_PORT}:80'
-     - '443'
-     - '5222:5222'
-    stdin_open: true
-    tty: true
-    restart: always
-    privileged: true
-    volumes:
-     - ${VOLUMES_PATH_PREFIX}/community_data:/var/www/onlyoffice/Data
-     - ${VOLUMES_PATH_PREFIX}/community_log:/var/log/onlyoffice
-     - ${VOLUMES_PATH_PREFIX}/community_letsencrypt:/etc/letsencrypt
-     - ${VOLUMES_PATH_PREFIX}/document_data:/var/www/onlyoffice/DocumentServerData
-     - /sys/fs/cgroup:/sys/fs/cgroup:ro
-     - ${VOLUMES_PATH_PREFIX}/certs:/var/www/onlyoffice/Data/certs
-     
-  onlyoffice-document-server:
-    container_name:  ${APP_CONTAINER_NAME}-document-server
-    image: onlyoffice/documentserver:6.0.2
-    stdin_open: true
-    tty: true
-    restart: always
+      - $DB_MARIADB_PORT:3306
     environment:
-     - JWT_ENABLED=true
-     - JWT_SECRET=jwt_secret
-     - JWT_HEADER=AuthorizationJwt
-    ports:
-     - '9002:80'
-    expose:
-      - '80'
-      - '443'
+      - MYSQL_ROOT_PASSWORD=$DB_MARIADB_PASSWORD  # Requested, set the root's password of MySQL service.
+      - MYSQL_LOG_CONSOLE=true
     volumes:
-       - ${VOLUMES_PATH_PREFIX}/document_data:/var/www/onlyoffice/Data
-       - ${VOLUMES_PATH_PREFIX}/document_log:/var/log/onlyoffice
-       - ${VOLUMES_PATH_PREFIX}/document_fonts:/usr/share/fonts/truetype/custom
-       - .document_forgotten:/var/lib/onlyoffice/documentserver/App_Data/cache/files/forgotten
+      - $VOLUMES_PATH_PREFIX/mysql_data:/var/lib/mysql  # Requested, specifies the path to MySQL data persistent store.
 
-  onlyoffice-control-panel:
-    container_name:  ${APP_CONTAINER_NAME}-control-panel
-    depends_on:
-     - onlyoffice-document-server
-     - onlyoffice-community-server
-    image: onlyoffice/controlpanel:2.9.0.351
-    environment:
-     - ONLYOFFICE_CORE_MACHINEKEY=core_secret
-    expose:
-      - '80'
-      - '443'
+  memcached:
+    image: memcached:$DB_MEMCACHED_VERSION
+    container_name: $APP_CONTAINER_NAME-memcached
     restart: always
+    entrypoint: memcached -m 256
+
+  elasticsearch:
+    image: seafileltd/elasticsearch-with-ik:$DB_ELASTICSEARCH_VERSION
+    container_name: $APP_CONTAINER_NAME-elasticsearch
+    restart: always
+    environment:
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    deploy:
+      resources:
+        limits:
+          memory: 2G
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ${VOLUMES_PATH_PREFIX}/controlpanel_data:/var/www/onlyoffice/Data
-      - ${VOLUMES_PATH_PREFIX}/controlpanel_log:/var/log/onlyoffice
-    stdin_open: true
-    tty: true
-    
+      - $VOLUMES_PATH_PREFIX/elasticsearch_data:/usr/share/elasticsearch/data  # Requested, specifies the path to Elasticsearch data persistent store.
+          
+  seafile:
+    image: docker.seafile.top/seafileltd/seafile-pro-mc:$APP_VERSION
+    container_name: $APP_CONTAINER_NAME
+    restart: always
+    ports:
+      - "$APP_PORT:80"
+#     - "443:443"  # If https is enabled, cancel the comment.
+    volumes:
+      - $VOLUMES_PATH_PREFIX/seafile_data:/shared   # Requested, specifies the path to Seafile data persistent store.
+    environment:
+      - DB_HOST=$DB_MARIADB_HOST
+      - DB_ROOT_PASSWD=$DB_MARIADB_PASSWORD
+      - TIME_ZONE=$APP_TIME_ZONE # Optional, default is UTC. Should be uncomment and set to your local time zone.
+      - SEAFILE_ADMIN_EMAIL=$APP_USER # Specifies Seafile admin user, default is 'me@example.com'
+      - SEAFILE_ADMIN_PASSWORD=$APP_PASSWORD    
+      - SEAFILE_SERVER_LETSENCRYPT=false   # Whether to use https or not
+      - SEAFILE_SERVER_HOSTNAME=$DOMAIN # Specifies your host name if https is enabled
+    depends_on:
+      - db
+      - memcached
+      - elasticsearch
+
 networks:
   default:
-      name: ${APP_NETWORK}
-    
-volumes:
-  document_data:
-    driver: local
-  document_log:
-    driver: local
-  document_forgotten:
-  community_mysql:
-  community_data:
-  community_log:
-  community_letsencrypt:
-  controlpanel_data:
-  controlpanel_log:
-  mysql_data:
+      name: "$APP_NETWORK"
