--- a/.env
+++ b/.env
@@ -1,23 +1,15 @@
-# add this file
-# Initial db root password is 123456
-# Initial login username: me@example.com and login password: admin123
-
 DB_MARIADB_VERSION=10.5
 DB_MARIADB_PORT=3306
-DB_MARIADB_PASSWORD=123456
-DB_MARIADB_HOST=db
-
+DB_MARIADB_PASSWORD=uQ8E1wVTzG8SOk3!
 DB_MEMCACHED_VERSION=1.5.6
-
 DB_ELASTICSEARCH_VERSION=5.6.16
 
+# Repo for community and Chinese edition ["seafileltd/seafile-mc", "docker.seafile.top/seafileltd/seafile-pro-mc"]
+APP_REPO=seafileltd/seafile-mc
 APP_VERSION=latest
-APP_PORT=9100
+APP_PORT=9001
 APP_USER=me@example.com
-APP_PASSWORD=admin123
-APP_CONTAINER_NAME=seafile
+APP_PASSWORD=uQ8E1wVTzG8SOk3!
+APP_NAME=seafile
 APP_TIME_ZONE=Etc/UTC
-APP_NETWORK=seafile
-
-VOLUMES_PATH_PREFIX=./volumes
-DOMAIN=seafile.example.com
+APP_HOST_URL=seafile.example.com
