--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,14 +38,14 @@ services:
       - elasticsearch_data:/usr/share/elasticsearch/data  # Requested, specifies the path to Elasticsearch data persistent store.
           
   seafile:
-    image: docker.seafile.top/seafileltd/seafile-pro-mc:$APP_VERSION
+    image: $APP_REPO:$APP_VERSION
     container_name: $APP_NAME
     restart: always
     ports:
       - "$APP_PORT:80"
 #     - "443:443"  # If https is enabled, cancel the comment.
     volumes:
-      - $VOLUMES_PATH_PREFIX/seafile_data:/shared   # Requested, specifies the path to Seafile data persistent store.
+      - seafile_data:/shared   # Requested, specifies the path to Seafile data persistent store.
     environment:
       - DB_HOST=$DB_MARIADB_HOST
       - DB_ROOT_PASSWD=$DB_MARIADB_PASSWORD
@@ -62,3 +62,8 @@ services:
 networks:
   default:
       name: "$APP_NAME"
+
+volumes:
+  seafile_data:
+  elasticsearch_data:
+  mysql_data:
