--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DB_MARIADB_PASSWORD=uQ8E1wVTzG8SOk3!
 DB_MEMCACHED_VERSION=1.5.6
 DB_ELASTICSEARCH_VERSION=5.6.16
 
-# Repo for community and Chinese edition ["seafileltd/seafile-mc", "docker.seafile.top/seafileltd/seafile-pro-mc"]
+# Repo for community and pro edition ["seafileltd/seafile-mc", "docker.seafile.top/seafileltd/seafile-pro-mc"]
 APP_REPO=seafileltd/seafile-mc
 APP_VERSION=latest
 APP_PORT=9001
