--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
+POWER_PASSWORD=uQ8E1wVTzG8SOk3!
 DB_MARIADB_VERSION=10.5
 DB_MARIADB_PORT=3306
-DB_MARIADB_PASSWORD=uQ8E1wVTzG8SOk3!
+DB_MARIADB_PASSWORD=$POWER_PASSWORD
 DB_MEMCACHED_VERSION=1.5.6
 DB_ELASTICSEARCH_VERSION=5.6.16
 
@@ -9,7 +10,7 @@ APP_REPO=seafileltd/seafile-mc
 APP_VERSION=latest
 APP_PORT=9001
 APP_USER=me@example.com
-APP_PASSWORD=uQ8E1wVTzG8SOk3!
+APP_PASSWORD=$POWER_PASSWORD
 APP_NAME=seafile
 APP_TIME_ZONE=Etc/UTC
 APP_HOST_URL=seafile.example.com
