--- a/.env
+++ b/.env
@@ -13,5 +13,6 @@ APP_USER=me@example.com
 APP_PASSWORD=$POWER_PASSWORD
 APP_NAME=seafile
 APP_TIME_ZONE=Etc/UTC
-APP_HOST_URL=seafile.example.com
+APP_URL_REPLACE=true
+APP_URL=seafile.example.com
 APP_NETWORK=websoft9
