--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     profiles:
       - pro
       
-  seafile:
+  seafile-pro:
     image: $APP_REPO:$APP_VERSION
     container_name: $APP_NAME
     restart: always
@@ -60,6 +60,29 @@ services:
       - db
       - memcached
       - elasticsearch
+    profiles:
+      - pro
+
+  seafile-ce:
+    image: $APP_REPO:$APP_VERSION
+    container_name: $APP_NAME
+    restart: always
+    ports:
+      - "$APP_PORT:80"
+#     - "443:443"  # If https is enabled, cancel the comment.
+    volumes:
+      - seafile_data:/shared   # Requested, specifies the path to Seafile data persistent store.
+    environment:
+      - DB_HOST=db
+      - DB_ROOT_PASSWD=$DB_MARIADB_PASSWORD
+      - TIME_ZONE=$APP_TIME_ZONE
+      - SEAFILE_ADMIN_EMAIL=$APP_USER
+      - SEAFILE_ADMIN_PASSWORD=$APP_PASSWORD    
+      - SEAFILE_SERVER_LETSENCRYPT=false
+      - SEAFILE_SERVER_HOSTNAME=$APP_HOST_URL
+    depends_on:
+      - db
+      - memcached
 
 networks:
   default:
