--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_MEMCACHED_VERSION=1.5.6
 DB_ELASTICSEARCH_VERSION=5.6.16
 
 APP_VERSION=latest
-APP_PORT=9001
+APP_HTTP_PORT=9001
 APP_USER=me@example.com
 APP_PASSWORD=$POWER_PASSWORD
 APP_NAME=seafile
