--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     container_name: $APP_NAME
     restart: always
     ports:
-      - "$APP_PORT:80"
+      - "$APP_HTTP_PORT:80"
 #     - "443:443"  # If https is enabled, cancel the comment.
     volumes:
       - seafile_data:/shared   # Requested, specifies the path to Seafile data persistent store.
