--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ APP_PASSWORD=$POWER_PASSWORD
 APP_NAME=seafile
 APP_TIME_ZONE=Etc/UTC
 APP_URL_REPLACE=true
-APP_URL=.example.com
+APP_URL=appname.example.com
 APP_NETWORK=websoft9
